--- a/day04/Cargo.toml
+++ b/day04/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+itertools = "0.10.5"
 once_cell = "1.16.0"
 regex = "1.7.0"
