--- a/day05/Cargo.toml
+++ b/day05/Cargo.toml
@@ -3,7 +3,8 @@ name = "day05"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.dev.package.backtrace]
+opt-level = 3
 
 [dependencies]
 color-eyre = "0.6.2"
